[metadata]
name = RadLoggerPy
summary = Radiation logger for serial based geiger counters
description_file =
    README.rst
description_content_type = text/x-rst; charset=UTF-8
author = Dantali0n
home_page = https://dantalion.nl
project_urls =
    Bug Tracker = https://github.com/Dantali0n/RadLoggerPy/issues
    Documentation = https://docs.openstack.org/pbr/
    Source Code = https://github.com/Dantali0n/radloggerpy
license = Apache-2
classifier =
    Environment :: Console
    Intended Audience :: Radiation monitoring
    Intended Audience :: Environmental monitoring
    License :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
packages =
    radloggerpy
python_requires = >=3.8

data_files =
    etc/radloggerpy = etc/radloggerpy/radloggerpy.conf
    usr/share/locale/nl/LC_MESSAGES =
        radloggerpy/locale/nl/LC_MESSAGES/radloggerpy.mo

[flake8]
max-line-length = 88
show-source = True
ignore = H105,E123,E125,W504,E203
enable-extensions = H106,H203,H204
builtins = _
exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg,build

[entry_points]
oslo.config.opts =
    radloggerpy = radloggerpy.config.opts:list_opts

console_scripts =
    radloggerpy  = radloggerpy.radloggerpy:main
    radloggercli = radloggerpy.radloggercli:main

radloggerpy.cli =
    device_show = radloggerpy.cli.v1.device.device_show:DeviceShow
    device_show_serial = radloggerpy.cli.v1.device.device_show_serial:DeviceShowSerial

    device_list = radloggerpy.cli.v1.device.device_list:DeviceList
    device_list_serial = radloggerpy.cli.v1.device.device_list_serial:DeviceListSerial

    device_remove = radloggerpy.cli.v1.device.device_remove:DeviceRemove

    device_add_serial = radloggerpy.cli.v1.device.device_add_serial:DeviceAddSerial

    device_models = radloggerpy.cli.v1.device.device_models:DeviceModels

    measurement_list = radloggerpy.cli.v1.measurement.measurement_list:MeasurementList

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = radloggerpy/locale/radloggerpy.pot

[update_catalog]
domain = radloggerpy
output_dir = radloggerpy/locale
input_file = radloggerpy/locale/radloggerpy.pot

[compile_catalog]
directory = radloggerpy/locale
domain = radloggerpy

[bdist_wheel]
universal = 1
